Update experiences section
Update the experiences section to be more concise and direct.

--- a/index.html
+++ b/index.html
@@ -64,11 +64,20 @@
                                 <div class="project-text-container">
                                     <h3>Space Snake: Classic Arcade Game</h3>
                                     <h6><i>Jun. 2024 - Sep. 2024</i></h6>
-                                    <p>Embarked on a learning journey to develop a classic Snake game using the Unity Game Engine and C#. This project served as an introduction to game development, allowing me to explore fundamental programming concepts and Unity's core features.</p>
-                                    <p>You can view the source code on GitHub <a href="https://github.com/cainfe/space-snake" target="_blank">here</a> or download and play it now on <a href="https://floyd-cain.itch.io/space-snake" target="_blank">itch.io</a>.</p>
+                                    <p>Embarked on a learning journey to develop a classic Snake game using the Unity
+                                        Game Engine and C#. This project served as an introduction to game development,
+                                        allowing me to explore fundamental programming concepts and Unity's core
+                                        features.</p>
+                                    <p>You can view the source code on GitHub <a
+                                            href="https://github.com/cainfe/space-snake" target="_blank">here</a> or
+                                        download and play it now on <a href="https://floyd-cain.itch.io/space-snake"
+                                            target="_blank">itch.io</a>.</p>
                                 </div>
                                 <div class="project-image-container">
-                                    <iframe id="space-snake-widget" frameborder="0" src="https://itch.io/embed/2959820?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=66FF66&amp;border_color=363636" width="552" height="167"><a href="https://floyd-cain.itch.io/space-snake">Space Snake by Floyd Cain</a></iframe>
+                                    <iframe id="space-snake-widget" frameborder="0"
+                                        src="https://itch.io/embed/2959820?bg_color=222222&amp;fg_color=eeeeee&amp;link_color=66FF66&amp;border_color=363636"
+                                        width="552" height="167"><a href="https://floyd-cain.itch.io/space-snake">Space
+                                            Snake by Floyd Cain</a></iframe>
                                 </div>
                             </div>
                         </div>
@@ -206,16 +215,14 @@
                             <h4>East Texas Professional Credit Union</h4>
                             <h6><i>Jan. 2024 - Present</i></h6>
                             <ul>
-                                <li>Identified critical security gap, led password security initiative, reducing
-                                    password reset/lockout tickets by 20% through successful implementation of a new
-                                    system, improving overall data security.</li>
-                                <li>Analyzed inefficiencies in the close account procedure, created a customized program
-                                    using HTML, CSS, JavaScript, and PowerOn that improved efficiency by over 50%,
-                                    guaranteeing a thorough account closure process.</li>
-                                <li>Actively fostered clear communication and collaboration with stakeholders, vendors,
-                                    and teammates, ensuring smooth project implementation.</li>
-                                <li>Demonstrated technical expertise and collaboration skills, recognized with Employee
-                                    of the Month award (January 2024).</li>
+                                <li>Developed a custom solution (HTML, CSS, JS, PowerOn) to streamline close account
+                                    procedures, boosting efficiency by over 50%.</li>
+                                <li>Led a password security initiative, reducing reset/unlock tickets by 20% through a
+                                    new system implementation.</li>
+                                <li>Fostered clear communication and collaboration with stakeholders, vendors, and team
+                                    members, ensuring smooth project implementation.</li>
+                                <li>Recognized as Employee of the Month (Jan. 2024) for technical expertise and
+                                    collaborative skills.</li>
                             </ul>
                         </div>
                         <div Class="slide">
@@ -223,15 +230,14 @@
                             <h4>East Texas Professional Credit Union</h4>
                             <h6><i>Sept. 2022 - Jan. 2024</i></h6>
                             <ul>
-                                <li>Coordinated with staff and management to collaborate on projects and resolve over
-                                    100 technical issues per month.</li>
-                                <li>Developed a Java application to automate a manual file conversion process,
-                                    streamlining workflow by an estimated 60% and improving accuracy.</li>
-                                <li>Enhanced staff landing page through HTML, CSS, and JavaScript, resulting in
-                                    increased visual engagement and faster access to critical resources.</li>
-                                <li>Identified inefficiencies in processing large member data files and developed custom
-                                    Java scripts to automate matching and validation, leading to improved accuracy and
-                                    significant time savings.</li>
+                                <li>Developed a Java application to automate file conversion, improving workflow
+                                    efficiency by an estimated 60%.</li>
+                                <li>Improved staff landing page with HTML, CSS, and JS for better user experience and
+                                    resource accessibility.</li>
+                                <li>Created custom Java scripts to automate data matching and validation, significantly
+                                    reducing processing time and errors.</li>
+                                <li>Coordinated with staff and management to resolve over 100 technical issues per
+                                    month.</li>
                             </ul>
                         </div>
                         <div Class="slide">
@@ -242,9 +248,7 @@
                                 <li>Maintained 99% accuracy in high-volume transactions.</li>
                                 <li>Safeguarded a perfect record of vault security for over 3 years, ensuring the
                                     integrity of records.</li>
-                                <li>Facilitated clear communication between membership and staff to effectively address
-                                    issues and fulfill member needs.</li>
-                                <li>Recognized as Employee of the Month for exceptional service (January 2022).</li>
+                                <li>Provided excellent customer service by effectively addressing member needs.</li>
                             </ul>
                         </div>
                     </div>
