--- a/index.html
+++ b/index.html
@@ -20,17 +20,11 @@
             <fieldset id="section-summary" class="section-container half-width">
                 <legend class="section-title">Summary</legend>
                 <div>
-                    <p>A dedicated software developer with a passion for crafting innovative solutions. I thrive in
-                        dynamic environments, solving complex problems with a keen eye for detail. Beyond my
-                        professional pursuits, I find joy in exploring the world of home espresso and immersing myself
-                        in the digital realm of gaming.<br><br>
-                        My experience during my college career at Stephen F. Austin State University ignited my passion
-                        for software development. In my current role at East Texas Professional Credit Union, I have 2
-                        years of experience building software solutions using Java and various other technologies like
-                        HTML, PHP, and SQL. I'm also intrigued about contributing to the open-source community and have
-                        actively participated in TradeNote on GitHub.<br><br>
-                        I'm always eager to connect with fellow developers and explore new challenges. Feel free to
-                        reach out if you have any interesting projects or opportunities.</p>
+                    <p>Enthusiastic and driven Junior Systems Administrator at East Texas Professional Credit Union,
+                        with a Bachelor of Science in Computer Science from Stephen F. Austin State University. Skilled
+                        in Java, PHP, HTML, CSS, and JavaScript, with a passion for leveraging technology to enhance
+                        productivity and user experience. Eager to transition into software development roles. Oracle
+                        Certified Associate, Java SE 8 Programmer and GitHub Foundations certified.</p>
                 </div>
             </fieldset>
 
